--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <script src="/env.js"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-416440-80"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-416440-80');
+  </script>
   <title>Bittensor (TAO) Blockchain Explorer : Taostats</title>
 </head>
 
