--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+  <link href="/layout_style.css" rel="stylesheet">
+
   <script src="/env.js"></script>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-416440-80"></script>
